// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dev Server SSR > 'CSS modules' 1`] = `
<link
  rel="stylesheet"
  href="/pages/with-css-module.vue?vue&type=style&index=0&lang.module.css"
>
<div class="_container_[css-module-hash]_2">
  CSS Module
</div>
`;

exports[`Dev Server SSR > 'Component in subdirectory' 1`] = `
<div>
  Subdirectory Page
</div>
`;

exports[`Dev Server SSR > 'Component with CSS' 1`] = `
<link
  rel="stylesheet"
  href="/pages/with-css.vue?vue&type=style&index=0&lang.css"
>
<link
  rel="stylesheet"
  href="/components/StyledCounter.vue?vue&type=style&index=0&scoped=[scoped]&lang.css"
>
<script
  type="module"
  src="/@visle/entry"
  async
>
</script>
<div>
  <h1>
    Styled Page
  </h1>
  <vue-island entry="/components/StyledCounter.vue">
    <button data-v-[scoped]>
      Styled Count: 0
    </button>
  </vue-island>
</div>
`;

exports[`Dev Server SSR > 'Component with island' 1`] = `
<script
  type="module"
  src="/@visle/entry"
  async
>
</script>
<div>
  <h1>
    Page
  </h1>
  <vue-island entry="/components/Counter.vue">
    <button>
      Count: 0
    </button>
  </vue-island>
</div>
`;

exports[`Dev Server SSR > 'Component with props' 1`] = `
<div>
  Hello Props
</div>
`;

exports[`Dev Server SSR > 'Full HTML document with head/body' 1`] = `
<html>
  <head>
    <title>
      Test Document
    </title>
    <script
      type="module"
      src="/@visle/entry"
      async
    >
    </script>
  </head>
  <body>
    <h1>
      Document
    </h1>
    <vue-island entry="/components/Counter.vue">
      <button>
        Count: 0
      </button>
    </vue-island>
  </body>
</html>
`;

exports[`Dev Server SSR > 'Island with alias import' 1`] = `
<script
  type="module"
  src="/@visle/entry"
  async
>
</script>
<div>
  <h1>
    Page
  </h1>
  <vue-island entry="/components/Counter.vue">
    <button>
      Count: 0
    </button>
  </vue-island>
</div>
`;

exports[`Dev Server SSR > 'Island with options API renamed compo…' 1`] = `
<script
  type="module"
  src="/@visle/entry"
  async
>
</script>
<div>
  <h1>
    Options API Renamed Page
  </h1>
  <vue-island entry="/components/OptionsCounter.vue">
    <button>
      Options Count: 0
    </button>
  </vue-island>
</div>
`;

exports[`Dev Server SSR > 'Island with options API' 1`] = `
<script
  type="module"
  src="/@visle/entry"
  async
>
</script>
<div>
  <h1>
    Options API Page
  </h1>
  <vue-island entry="/components/OptionsCounter.vue">
    <button>
      Options Count: 0
    </button>
  </vue-island>
</div>
`;

exports[`Dev Server SSR > 'Island with props' 1`] = `
<script
  type="module"
  src="/@visle/entry"
  async
>
</script>
<div>
  <vue-island
    entry="/components/Counter.vue"
    serialized-props="{&quot;count&quot;:42,&quot;label&quot;:&quot;Click me&quot;}"
  >
    <button label="Click me">
      Count: 42
    </button>
  </vue-island>
</div>
`;

exports[`Dev Server SSR > 'Multiple islands on the same page' 1`] = `
<script
  type="module"
  src="/@visle/entry"
  async
>
</script>
<div>
  <vue-island entry="/components/CounterA.vue">
    <button>
      Counter A
    </button>
  </vue-island>
  <vue-island entry="/components/CounterB.vue">
    <button>
      Counter B
    </button>
  </vue-island>
</div>
`;

exports[`Dev Server SSR > 'Named export' 1`] = `
<script
  type="module"
  src="/@visle/entry"
  async
>
</script>
<!--[-->
<div>
  island
</div>
<div>
  server
</div>
<vue-island entry="/components/NamedExportIsland.vue">
  <div>
    Named Export Island
  </div>
</vue-island>
<div>
  Named Export Server
</div>
`;

exports[`Dev Server SSR > 'Nested island' 1`] = `
<script
  type="module"
  src="/@visle/entry"
  async
>
</script>
<div>
  <vue-island entry="/components/Outer.vue">
    <div class="outer">
      <span>
        Outer
      </span>
      <span class="inner">
        Inner
      </span>
    </div>
  </vue-island>
</div>
`;

exports[`Dev Server SSR > 'Non-ascii file name' 1`] = `
<p>
  Non-ascii file name
</p>
`;

exports[`Dev Server SSR > 'Server component with slot' 1`] = `
<div class="layout">
  <header>
    Header
  </header>
  <main>
    <!--[-->
    <p>
      Page content
    </p>
  </main>
  <footer>
    Footer
  </footer>
</div>
`;

exports[`Dev Server SSR > 'Static component rendering' 1`] = `
<div>
  Hello World
</div>
`;

exports[`Dev Server SSR > Type definition file is generated on dev server start 1`] = `
"/* eslint-disable */
// @ts-nocheck
// Generated by Visle. !! DO NOT MODIFY THIS FILE !!
// Make sure to add this file to your tsconfig.json file as an "include" or "files" entry.

declare module 'visle' {
  import type { ComponentProps } from 'visle'

  interface VisleEntries {
    'テスト': ComponentProps<typeof import('./pages/テスト.vue')['default']>
    'with-slot': ComponentProps<typeof import('./pages/with-slot.vue')['default']>
    'with-props': ComponentProps<typeof import('./pages/with-props.vue')['default']>
    'with-options-api': ComponentProps<typeof import('./pages/with-options-api.vue')['default']>
    'with-options-api-renamed': ComponentProps<typeof import('./pages/with-options-api-renamed.vue')['default']>
    'with-nested-island': ComponentProps<typeof import('./pages/with-nested-island.vue')['default']>
    'with-multiple-islands': ComponentProps<typeof import('./pages/with-multiple-islands.vue')['default']>
    'with-island': ComponentProps<typeof import('./pages/with-island.vue')['default']>
    'with-island-props': ComponentProps<typeof import('./pages/with-island-props.vue')['default']>
    'with-island-alias': ComponentProps<typeof import('./pages/with-island-alias.vue')['default']>
    'with-css': ComponentProps<typeof import('./pages/with-css.vue')['default']>
    'with-css-module': ComponentProps<typeof import('./pages/with-css-module.vue')['default']>
    'static': ComponentProps<typeof import('./pages/static.vue')['default']>
    'named-export': ComponentProps<typeof import('./pages/named-export.vue')['default']>
    'document': ComponentProps<typeof import('./pages/document.vue')['default']>
    'nested/index': ComponentProps<typeof import('./pages/nested/index.vue')['default']>
  }
}
export {}
"
`;
